--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Scraping With Mongoose</title>
+    <title>NYT Scraper</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/material-kit/1.1.0/css/material-kit.css" rel="stylesheet"/>
   </head>
