--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,7 +9,7 @@
       {{this.summary}}
     </div>
     <a class="btn btn-info" href="{{this.link}}" target="_blank">Go to Article</a>
-    <p class="btn btn-warning" data-id={{this._id}}>Article Note</p>
+    <p class="btn btn-warning" data-id={{this._id}}>Add Comment</p>
   </div>
 
 </div>
